@@ -1059,22 +1059,22 @@ function getCurrentDelay($delay, array $arrOfFlexIntervals, $now) {
 		return $delay;
 	}
 
-	$currentDelay = SEC_PER_YEAR;
+	$currentDelay = -1;
 
 	foreach ($arrOfFlexIntervals as $flexInterval) {
 		if (sscanf($flexInterval, '%d/%29s', $flexDelay, $flexPeriod) != 2) {
 			continue;
 		}
-		if ($flexDelay < $currentDelay && checkTimePeriod($flexPeriod, $now)) {
+		if (($currentDelay == -1 || $flexDelay < $currentDelay) && checkTimePeriod($flexPeriod, $now)) {
 			$currentDelay = $flexDelay;
 		}
 	}
 
-	if ($currentDelay == SEC_PER_YEAR) {
+	if ($currentDelay == -1) {
 		return $delay;
 	}
 
-	return $currentDelay == 0 ? SEC_PER_YEAR : $currentDelay;
+	return $currentDelay;
 }
 
 /**
@@ -1179,16 +1179,18 @@ function getNextDelayInterval(array $arrOfFlexIntervals, $now, &$nextInterval) {
  * @return array
  */
 function calculateItemNextcheck($interfaceid, $itemid, $itemType, $delay, $flexIntervals, $now) {
-	if ($delay == 0) {
-		$delay = SEC_PER_YEAR;
-	}
-
 	// special processing of active items to see better view in queue
 	if ($itemType == ITEM_TYPE_ZABBIX_ACTIVE) {
-		$nextcheck = $now + $delay;
+		if ($delay != 0) {
+			$nextcheck = $now + $delay;
+		}
+		else {
+			$nextcheck = ZBX_JAN_2038;
+		}
 	}
 	else {
 		// try to find the nearest 'nextcheck' value with condition 'now' < 'nextcheck' < 'now' + SEC_PER_YEAR
+		// if it is not possible to check the item within a year, fail
 
 		$arrOfFlexIntervals = explode(';', $flexIntervals);
 		$t = $now;
@@ -1201,17 +1203,22 @@ function calculateItemNextcheck($interfaceid, $itemid, $itemType, $delay, $flexI
 			// calculate 'nextcheck' value for the current interval
 			$currentDelay = getCurrentDelay($delay, $arrOfFlexIntervals, $t);
 
-			$nextcheck = $currentDelay * floor($t / $currentDelay) + ($shift % $currentDelay);
+			if ($currentDelay != 0) {
+				$nextcheck = $currentDelay * floor($t / $currentDelay) + ($shift % $currentDelay);
 
-			if ($try == 0) {
-				while ($nextcheck <= $t) {
-					$nextcheck += $currentDelay;
+				if ($try == 0) {
+					while ($nextcheck <= $t) {
+						$nextcheck += $currentDelay;
+					}
+				}
+				else {
+					while ($nextcheck < $t) {
+						$nextcheck += $currentDelay;
+					}
 				}
 			}
 			else {
-				while ($nextcheck < $t) {
-					$nextcheck += $currentDelay;
-				}
+				$nextcheck = ZBX_JAN_2038;
 			}
 
 			// 'nextcheck' < end of the current interval ?
@@ -1225,10 +1232,9 @@ function calculateItemNextcheck($interfaceid, $itemid, $itemType, $delay, $flexI
 				break;
 			}
 		}
-		$delay = $currentDelay;
 	}
 
-	return array('nextcheck' => $nextcheck, 'delay' => $delay);
+	return $nextcheck;
 }
 
 /**
