@@ -127,7 +127,8 @@ static void	process_test_data(zbx_uint64_t httptestid, int lastfailedstep, doubl
 			break;
 		}
 
-		switch (types[num] = (unsigned char)atoi(row[0])) {
+		switch (types[num] = (unsigned char)atoi(row[0]))
+		{
 			case ZBX_HTTPITEM_TYPE_SPEED:
 			case ZBX_HTTPITEM_TYPE_LASTSTEP:
 				break;
