@@ -19,6 +19,7 @@ A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japa
 Bug fixes:
 ..F....... [ZBX-7616] fixed green background color for "New group" field in host edit form (Ivo)
 ...G...... [ZBX-7567] fixed processing of services[] key without a 3rd parameter (Sasha)
+..F.....S. [ZBX-7573] fixed item being checked at a wrong time when using flexible intervals (asaveljevs)
 ........S. [ZBX-6545] fixed possible SQL errors when syncing a node configuration with PostgreSQL backend version 8.2 and later (Sasha)
 ........S. [ZBX-7452] fixed processing of received events from slave node (Sasha)
 .......... [ZBXNEXT-1256] fixed parameter passing for example userparameter to obtain process CPU usage (Richlv)
